--- a/src/pages/Dashboard/index.css
+++ b/src/pages/Dashboard/index.css
@@ -6,3 +6,32 @@
     flex: 6;
     background-color: white;
 }
+
+.slogan {
+    font-size: 60px;
+    font-weight: bold;
+    margin: 60px;
+}
+
+.subtitle {
+    background-color: darkorange;
+    margin-left: 60px;
+    padding: 5px 60px;
+    color: white;
+    width: fit-content;
+}
+
+.home-illustration {
+    position: absolute;
+    right: 20px;
+    top: 50px;
+    margin: 50px 300px;
+    max-width:450px;
+    height:auto;
+}
+
+.analytics {
+}
+
+.analytics-graphical {
+}
